--- a/backend/web/css/admin.css
+++ b/backend/web/css/admin.css
@@ -152,9 +152,26 @@ a.desc:after {
 }
 
 .sidebar-top{
+    position: relative;
     width: 100%;
     height: 60px;
-    background-color: #e8e6e6;
+    background-color: #f1f1f1;
+}
+
+.sidebar-top>form{
+    position: absolute;
+    right: 20px;
+    top: 14px;
+    color: #8c9092;
+}
+
+.sidebar-top>form>button{
+    padding: 6px;
+    color: #6e7071;
+}
+
+.sidebar-top-exit{
+    float: right;
 }
 
 .sidebar-left-link a{
@@ -231,7 +248,7 @@ a.desc:after {
     background-color: #293846;
 }
 
-.btn-success {
+.btn-lilac {
     background-color: #19aa8d;
     border-color: #259e87;
 }
@@ -325,6 +342,45 @@ a.desc:after {
 }
 
 
+/* Страничка ожидание модерации */
+.user-moder {
+    min-width: 230px;
+    margin: 20px;
+    border: 1px solid #c1bebe;
+    padding: 20px 10px 20px 10px;
+}
+
+.user-moder-avatar{
+    display: inline-block;
+    padding: 0 10px 0 10px;
+}
+
+.user-moder-name{
+    display: inline-block;
+    padding: 0 10px 0 10px;
+}
+
+.user-moder-email-phone{
+    display: inline-block;
+    padding: 0 10px 0 10px;
+}
+
+.user-moder-btn{
+    display: inline-block;
+    padding: 10px;
+}
+
+.user-moder-avatar img{
+    height: 150px;
+}
+
+.user-moder-fio{
+    font-size: 22px;
+}
+
+.user-moder-compani{
+    color: #afafaf;
+}
 
 
 
