--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -166,3 +166,10 @@ a.desc:after {
     margin: 50px 0 0 0;
 }
 
+
+/* админ панель */
+.admin-panel{
+    height: 120px;
+    width: 100%;
+    background-color: #2f4050;
+}
