--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -240,3 +240,101 @@ a.desc:after {
     font-size: 20px;
     padding: 3px;
 }
+
+#userpassport-form_participation_id label{
+    display: block;
+}
+
+.form-update-pic{
+    width:300px;
+}
+
+.form-update-pic img{
+    width:100%;
+}
+
+
+/* тариф */
+.pay-fon {
+    height: 200px;
+    border: 1px solid #eee;
+    border-radius: 5px;
+    margin: 10px;
+}
+
+.pay-tariff {
+    padding: 49px 49px 49px 75px;
+}
+
+.pay-tariff h3{
+    margin-bottom: 11px;
+    font: bold 32px/1.2 'Tele2 Web',Arial,Helvetica,sans-serif;
+    color: #009bde;
+}
+
+.pay-tariff p{
+    font-size: 15px;
+}
+
+.pay-price{
+    padding: 60px 45px 50px 0px;
+}
+
+.pay-price p{
+    font-size: 18px;
+}
+
+.pay-price label{
+    font-size: 34px;
+    margin: 0 0 5px 0;
+}
+
+.pay-btn-pole {
+    padding: 74px;
+}
+
+.pay-btn {
+    border: 0;
+    width: 200px;
+    height: 50px;
+    border-radius: 10px;
+    background: #009bde;
+    border-color: #009bde;
+    font-size: 18px;
+    color: #fff;
+}
+
+.price-discont {
+    position: relative;
+}
+
+.pay-new-price {
+    position: absolute;
+    font-size: 22px;
+    color: red;
+    top: 10px;
+    right: 102px;
+    transform: rotate(9deg);
+}
+
+.pay-discont-line1{
+    position: absolute;
+    height: 4px;
+    width: 154px;
+    border-radius: 2px;
+    background-color: red;
+    transform: rotate(40deg);
+    top: 85px;
+    right: 140px;
+}
+
+.pay-discont-line2{
+    position: absolute;
+    height: 4px;
+    width: 154px;
+    border-radius: 2px;
+    background-color: red;
+    transform: rotate(-40deg);
+    top: 85px;
+    right: 140px;
+}
