--- a/backend/web/css/admin.css
+++ b/backend/web/css/admin.css
@@ -411,3 +411,29 @@ a.desc:after {
     display: inline-block;
     margin: 0px 0 0 3px;
 }
+
+#object-noticesarray label{
+    display: block;
+    padding: 0 0 0 15px;
+}
+
+.checkbox{
+    display: block;
+    padding: 0 0 0 35px;
+    margin: 0 0 10px 0;
+}
+
+.radio{
+    display: block;
+    padding: 0 0 0 35px;
+    margin: 0 0 10px 0;
+}
+
+.form-attribute{
+    margin: 5px 0 5px 0;
+}
+
+.row-padding{
+    padding-right: 15px;
+    padding-left: 15px;
+}
