--- a/backend/web/css/custom-admin-panel.css
+++ b/backend/web/css/custom-admin-panel.css
@@ -51,3 +51,9 @@
     border: 1px solid #197d69;
     border-radius: 3px;
 }
+
+.btn-logout{
+    color: #999c9e !important;
+    font-size: 15px !important;
+    font-weight: 600 !important;
+}
