--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -393,10 +393,21 @@ a.desc:after {
     position: absolute;
     right: 40px;
     background: #de89b0;
-    border: 1px solid red;
+    border: 2px solid red;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     padding: 5px 10px;
+}
+
+.object-conf{
+    position: absolute;
+    left: 50%;
+    background: #d5dcff;
+    border: 2px solid #f96ffb;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    padding: 5px 10px;
+    transform: translateX(-50%);
 }
 
 
