--- a/frontend/web/css/site-admin.css
+++ b/frontend/web/css/site-admin.css
@@ -10,6 +10,11 @@
     font-size: 16px;
     line-height: 1.5;
 }
+.theme-orange .nav-tabs .nav-item.active .nav-link {
+    border-bottom: 1px solid #ffc100 !important;
+    color: #ffc100 !important;
+    font-weight: 700;
+}
 
 @media (min-width: 768px) {
     .float-md-right {
