--- a/frontend/web/css/site-admin.css
+++ b/frontend/web/css/site-admin.css
@@ -94,3 +94,11 @@ textarea.form-control {
 .form-block .help-block {
     display: none;
 }
+
+.object-page .profile-page .profile-header {
+    padding-top: 0px;
+}
+
+.object-page .profile-page .profile-header .m-b-0 {
+    margin-bottom: 10px;
+}
