--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -578,6 +578,10 @@ header {
     z-index: 20;
 }
 
+.page header {
+    position: relative;
+}
+
 header .top {
     padding: 30px 0;
     color: #FFFFFF;
