--- a/frontend/web/css/site-admin.css
+++ b/frontend/web/css/site-admin.css
@@ -306,3 +306,11 @@ textarea.form-control {
 .owl-nav .owl-next {
     right: 18px;
 }
+
+.product_trust {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: inline-block;
+    z-index: 50;
+}
