--- a/frontend/web/css/site-admin.css
+++ b/frontend/web/css/site-admin.css
@@ -313,4 +313,7 @@ textarea.form-control {
     right: 20px;
     display: inline-block;
     z-index: 50;
+    background: #FFFFFF;
+    border-radius: 50%;
+    height: 50px;
 }
